# opencbdc-tx

./: CMakeLists.txt  sample_ToT_sequence.txt  sample_ecash_sequence.txt  sample_proofs.txt  sample_sequence.txt
benchmarks/: CMakeLists.txt  tcash.cpp
scripts/: build-run-parsec.sh  configure.sh  gen_bytecode.lua  plot.py  run-tcash.sh
scripts/tcash_scripts/: build-run-parsec.sh  order.py  run-tcash.sh  run_all.sh  spawn-agent.sh
src/: CMakeLists.txt
src/parsec/agent/: CMakeLists.txt
src/parsec/agent/runners/evm/: host.cpp  http_server.cpp
src/parsec/agent/runners/lua/: CMakeLists.txt  impl.cpp  impl.hpp
src/util/: CMakeLists.txt
src/util/tc_primitives/: CMakeLists.txt  blind_sig.cpp  blind_sig.hpp  merkletree.cpp  merkletree.hpp  mimc.cpp  mimc.hpp  verifier.cpp  verifier.hpp
tools/bench/parsec/lua/: lua_bench.cpp
tools/tcash/: CMakeLists.txt  ToT.cpp  ecash.cpp  ecash.lua  gen_bytecode.lua  merkletree.cpp  merkletree.hpp  merkletree.lua  mimc.cpp  mimc.hpp  tcash.cpp  test.cpp  verifier.cpp  verifier.hpp  wallet.cpp  wallet.hpp
tools/tcash/experiments/tcash_sequences/: ToT_16_10k.txt  ToT_16_10k_ordered.txt  ToT_256_deposits.txt  ToT_32_10k.txt  ToT_32_10k_ordered.txt  ToT_512_50k_ordered.txt  ToT_64_10k.txt  ToT_64_10k_ordered.txt  ecash_10k.txt  ecash_20k_withdrawals.txt
tools/tcash/tc_primitives/: CMakeLists.txt  merkletree.hpp  mimc.hpp  verifier.cpp  verifier.hpp
tools/tcash/tcash_sequences/: ToT_2_5k.txt  ToT_2_5k_ordered.txt  ecash_10k_ordered.txt  sample_ToT_sequence.txt  sample_ToT_sequence_v1.txt  sample_sequence.txt  sample_sequence_v1.txt  tx_samples_ToT_0.txt  tx_samples_ToT_16_10k_0.txt  tx_samples_ToT_16_10k_ordered_0.txt  tx_samples_ToT_2_10k_0.txt  tx_samples_ToT_2_10k_ordered_0.txt  tx_samples_ToT_2_50k_ordered_0.txt  tx_samples_ToT_2_5k_0.txt  tx_samples_ToT_2_5k_ordered_0.txt  tx_samples_ToT_32_10k_0.txt  tx_samples_ToT_32_10k_ordered_0.txt  tx_samples_ToT_32_50k_ordered_0.txt  tx_samples_ToT_4_10k_0.txt  tx_samples_ToT_4_10k_ordered_0.txt  tx_samples_ToT_4_50k_ordered_0.txt  tx_samples_ToT_64_10k_0.txt  tx_samples_ToT_64_10k_ordered_0.txt  tx_samples_ToT_8_10k_0.txt  tx_samples_ToT_8_10k_ordered_0.txt  tx_samples_ToT_8_50k_ordered_0.txt  tx_samples_ToT_v1_0.txt  tx_samples_ecash_10k_0.txt  tx_samples_ecash_10k_ordered_0.txt  tx_samples_lua_bench_0.txt  tx_samples_tcash_0.txt  tx_samples_tcash_10k_0.txt  tx_samples_tcash_10k_ordered_0.txt  tx_samples_tcash_v1_0.txt
tools/tcash/tcash_sequences/graphs/: analysis.md
